# tools

./: .gitignore  00_Index__tools.md  CLAUDE.md  CODE_REVIEW_GO_MCP_SERVERS_v1.md  CODE_REVIEW_LIBRARIAN_PHASE_2_3.md  CODE_REVIEW_NOTES.md  FIX_HARDCODED_PATHS_TASK.md  GEMINI_HANDOFF_MCP_SETUP.md  GO_MIGRATION_PROMPTS_CLAUDE_MCP.md  GO_MIGRATION_PROMPTS_OLLAMA_MCP.md  GO_MIGRATION_RECOMMENDATIONS.md  LIBRARIAN_ADAPTIVE_MEMORY_SPEC.md  LIBRARIAN_ADAPTIVE_MEMORY_VISION.md  LICENSE  OPENCLAW_DELEGATION_EXPERIMENTS.md  OPENCLAW_ESCALATION_RESEARCH.md  PRD_UNIFIED_AGENT_SYSTEM.md  PROGRESS.md  PROMPT_COMPLETE_TODO_POLISH_PHASE.md  PROMPT_EXPAND_SSH_TOOL_ANTIGRAVITY.md  PROMPT_RESEARCH_ANTIGRAVITY_PATTERNS.md  README.md  ROADMAP.md  TODO.md  UAS_BUILD_LOG.md  UAS_IMPLEMENTATION_PROMPTS.md  banned-packages.txt  check_models.sh  diag.py  ensure_grepai.py  gen-loop  gen-loop.README.md  gh-agent.sh  gh-antigravity.sh  gh-claude.sh  gh-codex.sh  gh-gemini.sh  gh-openclaw.sh  github-app-token.py  grepai-wrapper.sh  (+10 more)
agent-hub/: .cursorrules  .env.example  .gitignore  00_Index_agent-hub.md  AGENTS.md  BENCHMARK_RESULTS_2026-01-19.md  CLAUDE_CODE_TASK_CLEANUP.MD  CODE_REVIEW_CLAUDE_CODE_WEB_v1.md  CODE_REVIEW_CLAUDE_v1.md  CODE_REVIEW_CLAUDE_v2.md  CODE_REVIEW_FIXES_SUMMARY.md  ERIK_HALT.md  HALT.md  PRD.md  README.md  REMEDIATION_PROMPT_1_HIGH.md  REMEDIATION_PROMPT_3_MEDIUM.md  TODO.md  agent_hooks.json  cursor-setup-READ_THIS.md  hub.py  pyproject.toml  registry-entry.json  requirements.txt  skill.json  test_failures.txt
agent-hub/.cursor/: hooks.json
agent-hub/Documents/: API.md  Agentic Blueprint Setup V2.md  Agentic Blueprint.md  Agentic_Blueprint_Setup_index.md  CURSOR_MCP_SETUP.md  Direct_Communication_Protocol.md  FEATURE_FLAG_POLICY.md  FLOOR_MANAGER_STARTUP_PROTOCOL.md  MAD_FRAMEWORK.md  README.md  V4_IMPLEMENTATION_COMPLETE.md
agent-hub/_handoff/: .gitignore
librarian-mcp/: BENCHMARK_RESULTS.md  README.md  mcp_config.json  pyproject.toml  smoke_test_adaptive.py
model-bench/: .env.example  .gitignore  README.md  pyproject.toml
(+517 files in other folders)
