[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-hub"
version = "0.1.0"
description = "Unified Agent System - Multi-tier agent orchestration platform"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "openai>=1.0,<2.0",
    "jsonschema>=4.0,<5.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "swarm @ git+https://github.com/openai/swarm.git@0c82d7d868bb8e2d380dfd2a319b5c3a1f4c0cb9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
