[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librarian-mcp"
version = "0.1.0"
description = "MCP server for project knowledge queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
librarian-mcp = "librarian_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
